# enGPT

./: .gitignore  ENGPT_CODE_EXPLAINED.md  LICENSE  MANIFEST.in  README.md  changelog.md  efficient-ngpt.md  pyproject.toml
assets/reports/: gpu_report_depth_128l_d128_s128_gauge_300.json  gpu_report_depth_64l_d128_s128_gauge_500.json  gpu_report_publication_trace_4l_d256_s256_300.json  gpu_report_regime_2x128_s128_500.json  gpu_report_regime_4x256_s512_500.json  gpu_report_token_efficiency_lr1e3.json
derivations/: ENGPT_CODE_EXPLAINED.md  efficient-ngpt.md  engpt-code-derivation.md  kernel-implementation.md
engpt/: __init__.py  config.py  data.py  kernels.py  models.py  optim.py
examples/: quickstart.py
scripts/: __init__.py  benchmark.py  gpu_train_benchmark.py  health_check.py  plot_gpu_report.py  plot_publication.py  scaling_sweep.py  serve_report.py  tokenize_fineweb.py  train_compare.py  tst_benchmark.py
tests/: test_kernels.py  test_models.py
